[project]
name = "joblytic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=2.0.0",
    "mcp[cli]>=1.13.1",
    "openai>=1.101.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]
